@@ -1,3 +1,24 @@
+/*
+ * Copyright (c)  Subhra Das Gupta
+ *
+ * This file is part of Xtreme Download Manager.
+ *
+ * Xtreme Download Manager is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public
+ * License as published by the Free Software Foundation; either
+ * version 3 of the License, or (at your option) any later version.
+ *
+ * Xtreme Download Manager is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public
+ * License along with Xtream Download Manager; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ * 
+ */
+
 package xdman.downloaders;
 
 import java.io.BufferedReader;
@@ -9,9 +30,10 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
+
+import org.tinylog.Logger;
 
 import xdman.Config;
 import xdman.XDMConstants;
@@ -21,13 +43,15 @@ import xdman.mediaconversion.FFmpeg;
 import xdman.mediaconversion.MediaConversionListener;
 import xdman.mediaconversion.MediaFormats;
 import xdman.util.FormatUtilities;
-import xdman.util.Logger;
+import xdman.util.IOUtils;
 import xdman.util.StringUtils;
 import xdman.util.XDMUtils;
 
+@SuppressWarnings("ResultOfMethodCallIgnored")
 public abstract class SegmentDownloader extends Downloader implements SegmentListener, MediaConversionListener {
+
+	private final int MIN_CHUNK_SIZE;
 	private boolean init = false;
-	private int MIN_CHUNK_SIZE = 256 * 1024;
 	private boolean assembleFinished;
 	private long totalAssembled;
 
@@ -37,29 +61,28 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 		this.length = -1;
 		this.MAX_COUNT = Config.getInstance().getMaxSegments();
 		this.MIN_CHUNK_SIZE = Config.getInstance().getMinSegmentSize();
-		this.lastDownloaded = downloaded;
+		this.lastDownloaded = this.downloaded;
 		this.prevTime = System.currentTimeMillis();
 		this.eta = "---";
 	}
 
 	public void start() {
-		Logger.log("creating folder " + folder);
-		new File(folder).mkdirs();
-		chunks = new ArrayList<Segment>();
+		Logger.info("creating folder " + this.folder);
+		new File(this.folder).mkdirs();
+		this.chunks = new ArrayList<>();
 		try {
-			Segment c1 = new SegmentImpl(this, folder);
-			// handle case of single dash stream
+			Segment c1 = new SegmentImpl(this, this.folder);
 			if (getMetadata() instanceof DashMetadata) {
 				c1.setTag("T1");
 			}
 			c1.setLength(-1);
 			c1.setStartOffset(0);
 			c1.setDownloaded(0);
-			chunks.add(c1);
+			this.chunks.add(c1);
 			c1.download(this);
 		} catch (IOException e) {
 			this.errorCode = XDMConstants.RESUME_FAILED;
-			this.listener.downloadFailed(id);
+			this.listener.downloadFailed(this.id);
 		}
 
 	}
@@ -67,75 +90,70 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 	@Override
 	public void resume() {
 		try {
-			stopFlag = false;
-			Logger.log("Resuming");
+			this.stopFlag = false;
+			Logger.info("Resuming");
 			if (!restoreState()) {
-				Logger.log("Starting from beginning");
+				Logger.info("Starting from beginning");
 				start();
 				return;
 			}
-			this.lastDownloaded = downloaded;
+			this.lastDownloaded = this.downloaded;
 			this.prevTime = System.currentTimeMillis();
-			Logger.log("Restore success");
-			init = true;
+			Logger.info("Restore success");
+			this.init = true;
 			Segment c1 = findInactiveChunk();
 			if (c1 != null) {
 				try {
 					c1.download(this);
 				} catch (Exception e) {
-					Logger.log(e);
-					if (!stopFlag) {
-						Logger.log(e);
+					Logger.error(e);
+					if (!this.stopFlag) {
 						this.errorCode = XDMConstants.RESUME_FAILED;
-						listener.downloadFailed(this.id);
-						return;
+						this.listener.downloadFailed(this.id);
 					}
 				}
 			} else if (allFinished()) {
-				assembleAsync();
+				this.assembleAsync();
 			} else {
-				Logger.log("Internal error: no inactive/incomplete chunk found while resuming!");
+				Logger.warn("Internal error: no inactive/incomplete chunk found while resuming!");
 			}
 		} catch (Exception e) {
-			Logger.log(e);
+			Logger.error(e);
 			this.errorCode = XDMConstants.RESUME_FAILED;
-			listener.downloadFailed(this.id);
-			return;
+			this.listener.downloadFailed(this.id);
 		}
 	}
 
 	private synchronized void createChunk() throws IOException {
-		if (stopFlag)
+		if (this.stopFlag)
 			return;
 		int activeCount = getActiveChunkCount();
-		Logger.log("active count:" + activeCount);
-		if (activeCount == MAX_COUNT) {
+		Logger.info("active count:" + activeCount);
+		if (activeCount == this.MAX_COUNT) {
 			return;
 		}
 
-		int rem = MAX_COUNT - activeCount;
-		// Logger.log("rem:" + rem);
+		int rem = this.MAX_COUNT - activeCount;
 
-		rem -= retryFailedChunks(rem);
+		rem -= this.retryFailedChunks(rem);
 
 		if (rem > 0) {
-			Segment c1 = findMaxChunk();
-			Segment c = splitChunk(c1);
+			Segment c1 = this.findMaxChunk();
+			Segment c = this.splitChunk(c1);
 			if (c != null) {
-				Logger.log("creating chunk " + c);
-				chunks.add(c);
+				Logger.info("creating chunk " + c);
+				this.chunks.add(c);
 				c.download(this);
 			}
 		}
 	}
 
 	private Segment findMaxChunk() {
-		if (stopFlag)
+		if (this.stopFlag)
 			return null;
 		long size = -1;
 		String id = null;
-		for (int i = 0; i < chunks.size(); i++) {
-			Segment c = chunks.get(i);
+		for (Segment c : this.chunks) {
 			if (c.isActive()) {
 				long rem = c.getLength() - c.getDownloaded();
 				if (rem > size) {
@@ -144,27 +162,25 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 				}
 			}
 		}
-		if (size < MIN_CHUNK_SIZE)
+		if (size < this.MIN_CHUNK_SIZE)
 			return null;
 		return getById(id);
 	}
 
-	// merge c2 into c1
 	private void mergeChunk(Segment c1, Segment c2) {
 		c1.setLength(c1.getLength() + c2.getLength());
 	}
 
 	private Segment splitChunk(Segment c) throws IOException {
-		if (c == null || stopFlag)
+		if (c == null || this.stopFlag)
 			return null;
 		long rem = c.getLength() - c.getDownloaded();
 		long offset = c.getStartOffset() + c.getLength() - rem / 2;
 		long len = rem / 2;
-		Logger.log("Changing length from: " + c.getLength() + " to " + (c.getLength() - rem / 2));
+		Logger.info("Changing length from: " + c.getLength() + " to " + (c.getLength() - rem / 2));
 		c.setLength(c.getLength() - rem / 2);
-		Segment c2 = new SegmentImpl(this, folder);
-		// handle case of single dash stream
-		if (getMetadata() instanceof DashMetadata) {
+		Segment c2 = new SegmentImpl(this, this.folder);
+		if (this.getMetadata() instanceof DashMetadata) {
 			c2.setTag("T1");
 		}
 		c2.setLength(len);
@@ -173,11 +189,10 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 	}
 
 	private Segment findNextNeedyChunk(Segment chunk) {
-		if (stopFlag)
+		if (this.stopFlag)
 			return null;
 		long offset = chunk.getStartOffset() + chunk.getLength();
-		for (int i = 0; i < chunks.size(); i++) {
-			Segment c = chunks.get(i);
+		for (Segment c : this.chunks) {
 			if (c.getDownloaded() == 0) {
 				if (!c.isFinished()) {
 					if (c.getStartOffset() == offset) {
@@ -190,71 +205,69 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 	}
 
 	private synchronized boolean onComplete(String id) throws IOException {
-		if (allFinished() || length < 0) {
-			// finish
-			finished = true;
-			updateStatus();
+		if (allFinished() || this.length < 0) {
+			this.finished = true;
+			this.updateStatus();
 			try {
-				assemble();
-				if (!assembleFinished) {
+				this.assemble();
+				if (!this.assembleFinished) {
 					throw new IOException("Assemble failed");
 				}
-				Logger.log("********Download finished*********");
+				Logger.info("********Download finished*********");
 				updateStatus();
-				listener.downloadFinished(this.id);
+				this.listener.downloadFinished(this.id);
 			} catch (Exception e) {
-				if (!stopFlag) {
-					Logger.log(e);
+				Logger.error(e);
+				if (!this.stopFlag) {
 					this.errorCode = XDMConstants.ERR_ASM_FAILED;
-					listener.downloadFailed(this.id);
+					this.listener.downloadFailed(this.id);
 				}
 			}
-
-			listener = null;
+			this.listener = null;
 			return true;
 		}
 		Segment chunk = getById(id);
-		Logger.log("Complete: " + chunk + " " + chunk.getDownloaded() + " " + chunk.getLength());
+		Logger.info("Complete: " + chunk + " " + chunk.getDownloaded() + " " + chunk.getLength());
 		Segment nextNeedyChunk = findNextNeedyChunk(chunk);
 		if (nextNeedyChunk != null) {
-			Logger.log("****************Needy chunk found!!!");
-			Logger.log("Stopping: " + nextNeedyChunk);
+			Logger.info("****************Needy chunk found!!!");
+			Logger.info("Stopping: " + nextNeedyChunk);
 			nextNeedyChunk.stop();
-			chunks.remove(nextNeedyChunk);
+			this.chunks.remove(nextNeedyChunk);
 			nextNeedyChunk.dispose();
 			mergeChunk(chunk, nextNeedyChunk);
-			createChunk();
+			this.createChunk();
 			return false;
 		}
-		clearChannel(chunk);
-		createChunk();
+		this.clearChannel(chunk);
+		this.createChunk();
 		return true;
 	}
 
 	@Override
 	public synchronized void chunkInitiated(String id) throws IOException {
-		if (stopFlag)
+		if (this.stopFlag)
 			return;
-		if (!init) {
+		if (!this.init) {
 			Segment c = getById(id);
 			this.length = c.getLength();
-			init = true;
-			Logger.log("size: " + this.length);
+			this.init = true;
+			Logger.info("size: " + this.length);
 			if (c.getChannel() instanceof HttpChannel) {
 				super.getLastModifiedDate(c);
 			}
-			saveState();
-			chunkConfirmed(c);
-			listener.downloadConfirmed(this.id);
+			this.saveState();
+			this.chunkConfirmed(c);
+			this.listener.downloadConfirmed(this.id);
 		}
-		if (length > 0) {
-			createChunk();
+		if (this.length > 0) {
+			this.createChunk();
 		}
 	}
 
 	@Override
 	public synchronized boolean chunkComplete(String id) throws IOException {
-		if (finished) {
+		if (this.finished) {
 			return true;
 		}
 
@@ -262,33 +275,33 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 			return true;
 		}
 
-		saveState();
+		this.saveState();
 
-		return onComplete(id);
+		return this.onComplete(id);
 	}
 
 	@Override
 	public void chunkUpdated(String id) {
-		if (stopFlag)
+		if (this.stopFlag)
 			return;
 		long now = System.currentTimeMillis();
-		if (now - lastSaved > 5000) {
+		if (now - this.lastSaved > 5000) {
 			synchronized (this) {
 				saveState();
 			}
-			lastSaved = now;
+			this.lastSaved = now;
 		}
-		if (now - lastUpdated > 1000) {
-			updateStatus();
-			lastUpdated = now;
+		if (now - this.lastUpdated > 1000) {
+			this.updateStatus();
+			this.lastUpdated = now;
 			synchronized (this) {
-				int activeCount = getActiveChunkCount();
-				if (activeCount < MAX_COUNT) {
-					int rem = MAX_COUNT - activeCount;
+				int activeCount = this.getActiveChunkCount();
+				if (activeCount < this.MAX_COUNT) {
+					int rem = this.MAX_COUNT - activeCount;
 					try {
-						retryFailedChunks(rem);
+						this.retryFailedChunks(rem);
 					} catch (Exception e) {
-						Logger.log(e);
+						Logger.error(e);
 					}
 				}
 			}
@@ -298,38 +311,37 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 	private void assemble() throws IOException {
 		InputStream in = null;
 		OutputStream out = null;
-		totalAssembled = 0L;
-		assembling = true;
-		assembleFinished = false;
-		String outFileFinal = getOutputFileName(true);
-		String outFileName = (outputFormat == 0 ? UUID.randomUUID().toString() + "_" + outFileFinal
+		this.totalAssembled = 0L;
+		this.assembling = true;
+		this.assembleFinished = false;
+		String outFileFinal = this.getOutputFileName(true);
+		String outFileName = (this.outputFormat == 0 ? UUID.randomUUID() + "_" + outFileFinal
 				: UUID.randomUUID().toString());
-		String outputFolder = (outputFormat == 0 ? getOutputFolder() : folder);
+		String outputFolder = (this.outputFormat == 0 ? getOutputFolder() : this.folder);
 		XDMUtils.mkdirs(getOutputFolder());
 		File outFile = new File(outputFolder, outFileName);
 		File ffOutFile = null;
 		try {
-			if (stopFlag)
+			if (this.stopFlag)
 				return;
-			byte buf[] = new byte[1024 * 1024];
-			Logger.log("assembling... ");
-			Collections.sort(chunks, new SegmentComparator());
-			// chunks.sort(new SegmentComparator());
+			byte[] buf = new byte[1024 * 1024];
+			Logger.info("assembling... ");
+			this.chunks.sort(new SegmentComparator());
 			out = new FileOutputStream(outFile);
 			for (int i = 0; i < chunks.size(); i++) {
-				Logger.log("chunk " + i + " " + stopFlag);
-				Segment c = chunks.get(i);
+				Logger.info("chunk " + i + " " + this.stopFlag);
+				Segment c = this.chunks.get(i);
 				in = new FileInputStream(new File(folder, c.getId()));
 				long rem = c.getLength();
 				while (true) {
 					int x = (int) (rem > 0 ? (rem > buf.length ? buf.length : rem) : buf.length);
 					int r = in.read(buf, 0, x);
-					if (stopFlag) {
+					if (this.stopFlag) {
 						return;
 					}
 
 					if (r == -1) {
-						if (length > 0) {
+						if (this.length > 0) {
 							throw new IllegalArgumentException("Assemble EOF");
 						} else {
 							break;
@@ -337,36 +349,35 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 					}
 
 					out.write(buf, 0, r);
-					if (stopFlag) {
+					if (this.stopFlag) {
 						return;
 					}
-					if (length > 0) {
+					if (this.length > 0) {
 						rem -= r;
 						if (rem == 0)
 							break;
 					}
-					totalAssembled += r;
+					this.totalAssembled += r;
 					long now = System.currentTimeMillis();
-					if (now - lastUpdated > 1000) {
-						updateStatus();
-						lastUpdated = now;
+					if (now - this.lastUpdated > 1000) {
+						this.updateStatus();
+						this.lastUpdated = now;
 					}
 				}
-				in.close();
+				IOUtils.closeFlow(in);
 			}
-			out.close();
-			setLastModifiedDate(outFile);
-			updateStatus();
-			if (outputFormat != 0) {
+			IOUtils.closeFlow(out);
+			this.setLastModifiedDate(outFile);
+			this.updateStatus();
+			if (this.outputFormat != 0) {
 				XDMUtils.mkdirs(getOutputFolder());
 				this.converting = true;
-				ffOutFile = new File(getOutputFolder(), UUID.randomUUID().toString() + "_" + getOutputFileName(true));
+				ffOutFile = new File(getOutputFolder(), UUID.randomUUID() + "_" + getOutputFileName(true));
 
-				this.ffmpeg = new FFmpeg(Arrays.asList(new String[] { outFile.getAbsolutePath() }),
-						ffOutFile.getAbsolutePath(), this, MediaFormats.getSupportedFormats()[outputFormat],
-						outputFormat == 0);
-				int ret = ffmpeg.convert();
-				Logger.log("FFmpeg exit code: " + ret);
+				this.ffmpeg = new FFmpeg(List.of(outFile.getAbsolutePath()), ffOutFile.getAbsolutePath(), this,
+						MediaFormats.getSupportedFormats()[outputFormat], outputFormat == 0);
+				int ret = this.ffmpeg.convert();
+				Logger.info("FFmpeg exit code: " + ret);
 
 				if (ret != 0) {
 					throw new IOException("FFmpeg failed");
@@ -377,7 +388,6 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 					}
 				}
 			}
-			// delete the original file if exists and rename the temp file to original
 			File realFile = new File(getOutputFolder(), getOutputFileName(true));
 			if (realFile.exists()) {
 				realFile.delete();
@@ -390,25 +400,15 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 			outFile.renameTo(realFile);
 			setLastModifiedDate(outFile);
 
-			assembleFinished = true;
+			this.assembleFinished = true;
 		} catch (Exception e) {
-			Logger.log(e);
+			Logger.error(e);
 			throw new IOException(e);
 		} finally {
-			if (in != null) {
-				try {
-					in.close();
-				} catch (Exception e2) {
-				}
-			}
-			if (out != null) {
-				try {
-					out.close();
-				} catch (Exception e2) {
-				}
-			}
+			IOUtils.closeFlow(in);
+			IOUtils.closeFlow(out);
 
-			if (!assembleFinished) {
+			if (!this.assembleFinished) {
 				outFile.delete();
 				if (ffOutFile != null) {
 					ffOutFile.delete();
@@ -417,78 +417,58 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 		}
 	}
 
-	// private void closeStream(InputStream in, OutputStream out) {
-	// if (in != null) {
-	// try {
-	// in.close();
-	// } catch (Exception e2) {
-	// }
-	// if (out != null) {
-	// try {
-	// out.close();
-	// } catch (Exception e2) {
-	// }
-	// }
-	// }
-	// }
-
-	// example
-	// public HttpChannel createChannel(Segment segment){
-	// return new HttpChannel(httpMetadata,segment);
-	// }
 	@Override
 	public abstract AbstractChannel createChannel(Segment segment);
 
 	public void stop() {
-		stopFlag = true;
-		saveState();
-		for (int i = 0; i < chunks.size(); i++) {
-			chunks.get(i).stop();
+		this.stopFlag = true;
+		this.saveState();
+		for (Segment chunk : this.chunks) {
+			chunk.stop();
 		}
 
 		if (this.ffmpeg != null) {
 			this.ffmpeg.stop();
 		}
-		listener.downloadStopped(id);
-		listener = null;
+		this.listener.downloadStopped(id);
+		this.listener = null;
 	}
 
 	private void saveState() {
-		if (length < 0)
+		if (this.length < 0)
 			return;
-		StringBuffer sb = new StringBuffer();
-		sb.append(this.length + "\n");
-		sb.append(downloaded + "\n");
-		sb.append(chunks.size() + "\n");
-		for (int i = 0; i < chunks.size(); i++) {
-			Segment seg = chunks.get(i);
-			sb.append(seg.getId() + "\n");
-			sb.append(seg.getLength() + "\n");
-			sb.append(seg.getStartOffset() + "\n");
-			sb.append(seg.getDownloaded() + "\n");
+		StringBuilder sb = new StringBuilder();
+		sb.append(this.length).append("\n");
+		sb.append(this.downloaded).append("\n");
+		sb.append(this.chunks.size()).append("\n");
+		for (Segment seg : this.chunks) {
+			sb.append(seg.getId()).append("\n");
+			sb.append(seg.getLength()).append("\n");
+			sb.append(seg.getStartOffset()).append("\n");
+			sb.append(seg.getDownloaded()).append("\n");
 		}
-		if (!StringUtils.isNullOrEmptyOrBlank(lastModified)) {
-			sb.append(this.lastModified + "\n");
+		if (!StringUtils.isNullOrEmptyOrBlank(this.lastModified)) {
+			sb.append(this.lastModified).append("\n");
 		}
 		try {
-			File tmp = new File(folder, System.currentTimeMillis() + ".tmp");
-			File out = new File(folder, "state.txt");
+			File tmp = new File(this.folder, System.currentTimeMillis() + ".tmp");
+			File out = new File(this.folder, "state.txt");
 			FileOutputStream fs = new FileOutputStream(tmp);
 			fs.write(sb.toString().getBytes());
-			fs.close();
+			IOUtils.closeFlow(fs);
 			out.delete();
 			tmp.renameTo(out);
 		} catch (Exception e) {
-			Logger.log(e);
+			Logger.error(e);
 		}
 	}
 
 	private boolean restoreState() {
 		BufferedReader br = null;
-		chunks = new ArrayList<Segment>();
-		File file = new File(folder, "state.txt");
+		this.chunks = new ArrayList<>();
+		File file = new File(this.folder, "state.txt");
 		if (!file.exists()) {
-			file = getBackupFile(folder);
+			file = getBackupFile(this.folder);
 			if (file == null) {
 				return false;
 			}
@@ -503,28 +483,21 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 				long len = Long.parseLong(XDMUtils.readLineSafe(br));
 				long off = Long.parseLong(XDMUtils.readLineSafe(br));
 				long dwn = Long.parseLong(XDMUtils.readLineSafe(br));
-				Segment seg = new SegmentImpl(folder, cid, off, len, dwn);
-				// handle case of single dash stream
+				Segment seg = new SegmentImpl(this.folder, cid, off, len, dwn);
 				if (getMetadata() instanceof DashMetadata) {
 					seg.setTag("T1");
 				}
 
-				Logger.log("id: " + seg.getId() + "\nlength: " + seg.getLength() + "\noffset: " + seg.getStartOffset()
+				Logger.info("id: " + seg.getId() + "\nlength: " + seg.getLength() + "\noffset: " + seg.getStartOffset()
 						+ "\ndownload: " + seg.getDownloaded());
-				chunks.add(seg);
+				this.chunks.add(seg);
 			}
 			this.lastModified = br.readLine();
 			return true;
 		} catch (Exception e) {
-			Logger.log("Failed to load saved state");
-			Logger.log(e);
+			Logger.error(e, "Failed to load saved state");
 		} finally {
-			if (br != null) {
-				try {
-					br.close();
-				} catch (IOException e) {
-				}
-			}
+			IOUtils.closeFlow(br);
 		}
 		return false;
 	}
@@ -532,83 +505,75 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 	protected abstract void chunkConfirmed(Segment c);
 
 	public boolean shouldCleanup() {
-		return assembleFinished;
+		return this.assembleFinished;
 	}
 
 	private void updateStatus() {
 		try {
 			long now = System.currentTimeMillis();
-			if (converting) {
-				progress = this.convertPrg;
+			if (this.converting) {
+				this.progress = this.convertPrg;
 			} else if (this.assembling) {
-				long len = length > 0 ? length : downloaded;
-				progress = (int) ((totalAssembled * 100) / len);
+				long len = this.length > 0 ? this.length : this.downloaded;
+				this.progress = (int) ((totalAssembled * 100) / len);
 			} else {
 				long downloaded2 = 0;
-				if (segDet == null) {
-					segDet = new SegmentDetails();
+				if (this.segDet == null) {
+					this.segDet = new SegmentDetails();
 				}
-				if (segDet.getCapacity() < chunks.size()) {
-					segDet.extend(chunks.size() - segDet.getCapacity());
+				if (this.segDet.getCapacity() < this.chunks.size()) {
+					this.segDet.extend(this.chunks.size() - this.segDet.getCapacity());
 				}
-				segDet.setChunkCount(chunks.size());
-				downloadSpeed = 0;
-				for (int i = 0; i < chunks.size(); i++) {
-					Segment s = chunks.get(i);
+				this.segDet.setChunkCount(this.chunks.size());
+				this.downloadSpeed = 0;
+				for (int i = 0; i < this.chunks.size(); i++) {
+					Segment s = this.chunks.get(i);
 					downloaded2 += s.getDownloaded();
-					SegmentInfo info = segDet.getChunkUpdates().get(i);
+					SegmentInfo info = this.segDet.getChunkUpdates().get(i);
 					info.setDownloaded(s.getDownloaded());
 					info.setStart(s.getStartOffset());
 					info.setLength(s.getLength());
-					downloadSpeed += s.getTransferRate();
+					this.downloadSpeed += s.getTransferRate();
 				}
 				this.downloaded = downloaded2;
-				if (length > 0) {
-					progress = (int) ((downloaded * 100) / length);
-					long diff = downloaded - lastDownloaded;
-					long timeSpend = now - prevTime;
+				if (this.length > 0) {
+					this.progress = (int) ((this.downloaded * 100) / this.length);
+					long diff = this.downloaded - this.lastDownloaded;
+					long timeSpend = now - this.prevTime;
 					if (timeSpend > 0) {
 						float rate = ((float) diff / timeSpend) * 1000;
-						// if (rate > downloadSpeed) {
-						// downloadSpeed = rate;
-						// }
-						//downloadSpeed = rate;
-						this.eta = FormatUtilities.getETA(length - downloaded, rate);
+						this.eta = FormatUtilities.getETA(this.length - this.downloaded, rate);
 						if (this.eta == null) {
 							this.eta = "---";
 						}
-						lastDownloaded = downloaded;
-						prevTime = now;
+						this.lastDownloaded = this.downloaded;
+						this.prevTime = now;
 					}
 				}
 			}
-			listener.downloadUpdated(id);
+			this.listener.downloadUpdated(id);
 		} catch (Exception e) {
-			Logger.log(e);
+			Logger.error(e);
 		}
 	}
 
 	private void assembleAsync() {
-		new Thread(new Runnable() {
-
-			@Override
-			public void run() {
-				finished = true;
-				try {
-					assemble();
-					if (!assembleFinished) {
-						throw new IOException("Assemble not finished successfully");
-					}
-					Logger.log("********Download finished*********");
-					updateStatus();
-					cleanup();
-					listener.downloadFinished(id);
-				} catch (Exception e) {
-					if (!stopFlag) {
-						Logger.log(e);
-						errorCode = XDMConstants.ERR_ASM_FAILED;
-						listener.downloadFailed(id);
-					}
+		new Thread(() -> {
+			this.finished = true;
+			try {
+				this.assemble();
+				if (!this.assembleFinished) {
+					throw new IOException("Assemble not finished successfully");
+				}
+				Logger.info("********Download finished*********");
+				this.updateStatus();
+				this.cleanup();
+				this.listener.downloadFinished(id);
+			} catch (Exception e) {
+				Logger.error(e);
+				if (!this.stopFlag) {
+					this.errorCode = XDMConstants.ERR_ASM_FAILED;
+					this.listener.downloadFailed(this.id);
 				}
 			}
 		}).start();
@@ -618,9 +583,10 @@ public abstract class SegmentDownloader extends Downloader implements SegmentLis
 	public void progress(int progress) {
 		this.convertPrg = progress;
 		long now = System.currentTimeMillis();
-		if (now - lastUpdated > 1000) {
-			updateStatus();
-			lastUpdated = now;
+		if (now - this.lastUpdated > 1000) {
+			this.updateStatus();
+			this.lastUpdated = now;
 		}
 	}
+
 }
